fixed scrollbar styling in chrome

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,22 @@
   --main-lightgray: #f2f2f2;
 }
 
+::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+  background: #bababc;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4a6b74;
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+  background: #575757;
+}
+
 * {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -1200,7 +1216,7 @@ flex-grow: 1;
   height: 100%;
   background-color: var(--main-white);
   color: var(--main-turquoise);
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 1.2em;
   text-align: center;
 }
@@ -1212,7 +1228,6 @@ flex-grow: 1;
 #date-picker--left {
   height: 100%;
   margin-right: 10px;
-  padding: 20px;
   flex: 1 1 auto;
 }
 
